--- a/content/servizi2.html
+++ b/content/servizi2.html
@@ -20,37 +20,33 @@ backgroundImage: "https://cdn.prod.website-files.com/64be7e6dc2a60cecdf209737/66
 
   <div class="relative py-24 sm:py-32">
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
-      <div class="mx-auto max-w-2xl lg:mx-0">
+      <div class="mx-auto max-w-3xl text-center">
         <p class="text-base font-semibold leading-7 text-red-800">Manutenzione</p>
-        <h1 class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Revisione, riparazione ed upgrade di cilindri idraulici e pneumatici</h1>
-        <p class="mt-6 text-base leading-7 text-gray-700">La manutenzione di cilindri idraulici e pneumatici esistenti è il nostro core business e rappresenta la soluzione più veloce ed economica per ripristinare l’operatività dei vostri impianti.</p>
+        <h1 class="mt-2 text-4xl font-bold tracking-tight text-gray-900 sm:text-5xl">Revisione, riparazione ed upgrade di cilindri idraulici e pneumatici</h1>
+        <p class="mt-8 text-base/7 text-gray-700">La manutenzione di cilindri idraulici e pneumatici esistenti è il nostro core business e rappresenta la soluzione più veloce ed economica per ripristinare l’operatività dei vostri impianti.</p>
       </div>
 
-      <div class="mt-16 sm:mt-20 lg:mt-24">
+      <div class="mt-16">
         <div class="flex flex-row overflow-x-auto space-x-8">
-          <div class="flex-none relative isolate overflow-hidden w-[20rem] min-h-[30rem] p-6 lg:p-8 lg:py-16 rounded-xl shadow-xl ring-1 ring-gray-400/10">
-            <img src="/images/riparazione-cilindri.jpg" class="absolute left-0 top-0 inset-0 -z-10 w-full h-full object-cover" alt="Riparazione cilindri idraulici e pneumatici">
-            <div class="absolute w-full h-full inset-0 -z-10 bg-gradient-to-b from-black/70" aria-hidden="true"></div>
-            <div class="text-base leading-7 text-gray-200 text-shadow">Da una semplice revisione standard, che include un cambio guarnizioni ed una lucidatura dei principali componenti, a riparazioni avanzate che possono comprendere lavorazioni meccaniche su componenti esistenti, cromature a spessore e rifacimento di parti meccaniche quali ad esempio steli, camicie, pistoni, boccole, testate, fondelli, portasnodi.</div>
-          </div>
+          {{< text-and-image
+            text="Siamo in grado di offrire revisioni e riparazioni complete di cilindri idraulici e pneumatici di qualsiasi costruttore e tipologia: cilindri a semplice effetto e a pistone tuffante, cilindri a doppio effetto, cilindri telescopici o multi-stadio, capsule idrauliche, siano essi standard (ISO) o speciali."
+            image="/images/ref-4.jpg"
+            alt="Riparazione cilindri idraulici e pneumatici" >}}
 
-          <div class="flex-none relative isolate overflow-hidden w-[20rem] min-h-[30rem] p-6 lg:p-8 lg:py-16 rounded-xl shadow-xl ring-1 ring-gray-400/10">
-            <img src="/images/cilindri-telescopici.jpg" class="absolute left-0 top-0 inset-0 -z-10 w-full h-full object-cover" alt="Riparazione cilindri idraulici e pneumatici">
-            <div class="absolute w-full h-full inset-0 -z-10 bg-gradient-to-b from-black/80" aria-hidden="true"></div>
-            <div class="text-base leading-7 text-gray-200 text-shadow">Siamo in grado di offrire revisioni e riparazioni complete di cilindri idraulici e pneumatici di qualsiasi costruttore e tipologia: cilindri a semplice effetto e a pistone tuffante, cilindri a doppio effetto, cilindri telescopici o multi-stadio, capsule idrauliche, siano essi standard (ISO) o speciali.</div>
-          </div>
+          {{< text-and-image
+            text="Da una semplice revisione standard, che include un cambio guarnizioni ed una lucidatura dei principali componenti, a riparazioni avanzate che comprendono lavorazioni meccaniche su componenti esistenti, cromature a spessore e rifacimento di parti meccaniche quali ad esempio steli, camicie, pistoni, boccole, testate, fondelli, portasnodi."
+            image="/images/riparazione-cilindri.jpg"
+            alt="" >}}
 
-          <div class="flex-none relative isolate overflow-hidden w-[20rem] min-h-[30rem] p-6 lg:p-8 lg:py-16 rounded-xl shadow-xl ring-1 ring-gray-400/10">
-            <img src="/images/ref-3.jpg" class="absolute left-0 top-0 inset-0 -z-10 w-full h-full object-cover" alt="Riparazione cilindri idraulici e pneumatici">
-            <div class="absolute w-full h-full inset-0 -z-10 bg-gradient-to-b from-black/80" aria-hidden="true"></div>
-            <div class="text-base leading-7 text-gray-200 text-shadow">Abbiamo esperienza in molte applicazioni e tipologie industriali: questo permette di offrire soluzioni garantite che aumentano i tempi di attività dei macchinari e riducono i costi complessivi, grazie ad elevati standard di qualità.</div>
-          </div>
+          {{< text-and-image
+            text="Abbiamo esperienza in molte applicazioni e tipologie industriali: questo permette di offrire soluzioni garantite che aumentano i tempi di attività dei macchinari e riducono i costi complessivi, grazie ad elevati standard di qualità."
+            image="/images/ref-3.jpg"
+            alt="" >}}
 
-          <div class="flex-none relative isolate overflow-hidden w-[20rem] min-h-[30rem] p-6 lg:p-8 lg:py-16 rounded-xl shadow-xl ring-1 ring-gray-400/10">
-            <img src="/images/scudo.png" class="absolute left-0 top-0 inset-0 -z-10 w-full h-full object-cover" alt="Riparazione cilindri idraulici e pneumatici">
-            <div class="absolute w-full h-full inset-0 -z-10 bg-gradient-to-b from-black/80" aria-hidden="true"></div>
-            <div class="text-base leading-7 text-gray-200 text-shadow">Siamo consapevoli che i cilindri idraulici e pneumatici con prestazioni insufficienti o con perdite rappresentano un costo per la tua attività. Per questo motivo garantiamo riparazioni in urgenza di cilindri idraulici e pneumatici per ripartire il prima possibile con la produzione, incrementando allo stesso tempo la vita utile futura del cilindro.</div>
-          </div>
+          {{< text-and-image
+            text="Siamo consapevoli che i cilindri idraulici e pneumatici con prestazioni insufficienti o con perdite rappresentano un costo per la tua attività. Per questo motivo garantiamo riparazioni in urgenza di cilindri idraulici e pneumatici per ripartire il prima possibile con la produzione, incrementando allo stesso tempo la vita utile futura del cilindro."
+            image="/images/scudo.png"
+            alt="" >}}
         </div>
       </div>
 
@@ -71,7 +67,7 @@ backgroundImage: "https://cdn.prod.website-files.com/64be7e6dc2a60cecdf209737/66
       </div>
       <div class="lg:col-span-2 lg:col-start-1 lg:row-start-2 lg:mx-auto lg:grid lg:w-full lg:max-w-7xl lg:grid-cols-2 lg:gap-x-8 lg:px-8">
         <div class="lg:pr-4">
-          <div class="max-w-xl lg:max-w-lg text-base space-y-4 leading-7 text-gray-600">
+          <div class="max-w-xl lg:max-w-lg text-base/7 space-y-4 text-gray-700">
             <p>Centro Cilindri Digital Service è una piattaforma gratuita riservata ai nostri clienti che permette di monitorare tutte le attività di revisione, riparazione e nuove costruzioni svolte da Centro Cilindri. E’ accessibile tramite PC, tablet e smartphone e, come un abito sartoriale, può essere adattato alle esigenze ed obiettivi della tua azienda.</p>
             <p>Creiamo relazioni a lungo termine con i nostri clienti attraverso la condivisione e la trasparenza: per ogni cilindro è presente infatti una scheda generale con i principali dati dimensionali e applicativi ed uno storico al cui interno sono indicate le singole operazioni effettuate durante le manutenzioni e la lista di tutti i ricambi sostituiti, comprese le guarnizioni.</p>
           </div>
@@ -97,7 +93,7 @@ backgroundImage: "https://cdn.prod.website-files.com/64be7e6dc2a60cecdf209737/66
       <div class="mx-auto max-w-3xl lg:text-center">
         <h2 class="text-base font-semibold leading-7 text-red-800">Produzione</h2>
         <p class="mt-2 text-3xl font-bold tracking-tight text-white sm:text-4xl">Progettazione, reverse engineering e costruzione di nuovi cilindri idraulici/pneumatici e componenti meccanici a disegno</p>
-        <p class="mt-6 text-base leading-7 text-gray-300">Siamo in grado di progettare e fabbricare cilindri idraulici e pneumatici di qualsiasi tipologia: cilindri a semplice effetto e a pistone tuffante, cilindri a doppio effetto, cilindri telescopici o multi-stadio, capsule idrauliche, cilindri secondo standard ISO o speciali.</p>
+        <p class="mt-6 text-base/7 text-gray-300">Siamo in grado di progettare e fabbricare cilindri idraulici e pneumatici di qualsiasi tipologia: cilindri a semplice effetto e a pistone tuffante, cilindri a doppio effetto, cilindri telescopici o multi-stadio, capsule idrauliche, cilindri secondo standard ISO o speciali.</p>
       </div>
 
       <div class="mx-auto mt-16 max-w-2xl sm:mt-20 lg:mt-24 lg:max-w-4xl">
