Completato passaggio del deploy precedente e creato file TODO

--- a/content/about.html
+++ b/content/about.html
@@ -9,8 +9,10 @@ backgroundImage: ""
   <div class="max-w-screen-xl mx-auto">
     <div class="py-8 sm:py-16 lg:py-24 px-4 sm:px-8 lg:px-16">
       <div class="prose">
-        <p class="mb-4">Supportiamo le imprese industriali con servizi di riparazione e manutenzione di cilindri idraulici e pneumatici esistenti, con la progettazione e costruzione interna di nuovi cilindri a campione o disegno, proponendo eventuali upgrade. Offriamo inoltre assistenza sul campo e vendita guarnizioni di tenuta per cilindri e presse</p>
-        <p class="">Il nostro principale obiettivo è quello di creare relazioni a lungo termine con i clienti per sviluppare insieme programmi di riduzione dei costi, eliminazione perdite e lunghi fermi macchina attraverso l'aumento dell’affidabilità e del rendimento dei cilindri.</p>
+        <div class="text-lg leading-relaxed">
+          <p class="mb-4">Supportiamo le imprese industriali con servizi di riparazione e manutenzione di cilindri idraulici e pneumatici esistenti, con la progettazione e costruzione interna di nuovi cilindri a campione o disegno, proponendo eventuali upgrade. Offriamo inoltre assistenza sul campo e vendita guarnizioni di tenuta per cilindri e presse</p>
+          <p>Il nostro principale obiettivo è quello di creare relazioni a lungo termine con i clienti per sviluppare insieme programmi di riduzione dei costi, eliminazione perdite e lunghi fermi macchina attraverso l'aumento dell’affidabilità e del rendimento dei cilindri.</p>
+        </div>
       </div>
     </div>
   </div>
