--- a/content/servizi.html
+++ b/content/servizi.html
@@ -94,7 +94,7 @@ backgroundImage: "https://cdn.prod.website-files.com/64be7e6dc2a60cecdf209737/66
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
       <div class="mx-auto max-w-3xl lg:text-center">
         <h2 class="text-base font-semibold leading-7 text-red-800">Produzione</h2>
-        <p class="mt-2 text-4xl font-bold tracking-tight text-gray-900 sm:text-5xl">Progettazione, reverse engineering e costruzione di nuovi cilindri idraulici/pneumatici e componenti meccanici a disegno</p>
+        <p class="mt-2 text-4xl font-bold tracking-tight text-gray-900 sm:text-5xl">Progettazione, reverse engineering e costruzione di nuovi cilindri e componenti meccanici a disegno</p>
         <p class="mt-6 text-base/7 leading-relaxed text-gray-700">Siamo in grado di progettare e fabbricare cilindri idraulici e pneumatici di qualsiasi tipologia: cilindri a semplice effetto e a pistone tuffante, cilindri a doppio effetto, cilindri telescopici o multi-stadio, capsule idrauliche, cilindri secondo standard ISO o speciali.</p>
       </div>
 
