--- a/content/servizi.html
+++ b/content/servizi.html
@@ -30,7 +30,7 @@ backgroundImage: "https://cdn.prod.website-files.com/64be7e6dc2a60cecdf209737/66
         <div class="flex flex-row overflow-x-auto space-x-8">
           {{< text-and-image
             text="Siamo in grado di offrire revisioni e riparazioni complete di cilindri idraulici e pneumatici di qualsiasi costruttore e tipologia: cilindri a semplice effetto e a pistone tuffante, cilindri a doppio effetto, cilindri telescopici o multi-stadio, capsule idrauliche, siano essi standard (ISO) o speciali."
-            image="/images/ref-4.jpg"
+            image="/images/cilindri-idraulici.jpg"
             alt="Riparazione cilindri idraulici e pneumatici" >}}
 
           {{< text-and-image
@@ -40,7 +40,7 @@ backgroundImage: "https://cdn.prod.website-files.com/64be7e6dc2a60cecdf209737/66
 
           {{< text-and-image
             text="Abbiamo esperienza in molte applicazioni e tipologie industriali: questo permette di offrire soluzioni garantite che aumentano i tempi di attività dei macchinari e riducono i costi complessivi, grazie ad elevati standard di qualità."
-            image="/images/ref-3.jpg"
+            image="/images/cilindri-siderurgici.jpg"
             alt="" >}}
 
           {{< text-and-image
@@ -102,11 +102,11 @@ backgroundImage: "https://cdn.prod.website-files.com/64be7e6dc2a60cecdf209737/66
         <div class="flex flex-row overflow-x-auto space-x-8">
           {{< text-and-image
             text="Realizziamo nuovi cilindri sia su nostri progetti sia partendo da un disegno fornito dal cliente oppure da un campione esistente: attraverso attività di reverse engineering siamo in grado di fornire, oltre al cilindro, anche i disegni costruttivi."
-            image=""
+            image="/images/cilindro-sitema.jpg"
             alt="" >}}
           {{< text-and-image
             text="Le fasi di produzione dei singoli componenti meccanici dei cilindri avvengono tutte all’interno della nostra sede situata in provincia di Torino, dotata di linee di taglio, tornitura, fresatura, foratura, saldatura, montaggio, collaudo e verniciatura."
-            image=""
+            image="/images/pistoni-steli.jpg"
             alt="" >}}
           {{< text-and-image
             text="Tutti i prodotti sono progettati, sviluppati, fabbricati e testati da tecnici esperti e qualificati, desiderosi di fornire ai nostri clienti i migliori cilindri idraulici e pneumatici disponibili sul mercato. Produciamo i vostri cilindri partendo da semilavorati in acciaio ed altre leghe di alta qualità, che provengono principalmente da fornitori italiani."
@@ -144,17 +144,17 @@ backgroundImage: "https://cdn.prod.website-files.com/64be7e6dc2a60cecdf209737/66
         <div class="flex flex-row overflow-x-auto space-x-8">
           {{< text-and-image
             text="Assistenza in stabilimento con strumentazione idonea per rilevazione dimensioni delle sedi, analisi campioni e supporto post-vendita ai vostri manutentori durante la fase di installazione delle guarnizioni."
-            image=""
+            image="/images/cilindri-bilanciatori.jpg"
             alt="" >}}
 
           {{< text-and-image
             text="Fornitura guarnizioni commerciali e tornite fino a 2500 mm di diametro, con possibilità di creare kit completi personalizzati, in materiali elastomerici, polimerici, plastici, PTFE e molti altri."
-            image=""
+            image="/images/pacco-guarnizioni.jpg"
             alt="" >}}
 
           {{< text-and-image
             text="La nostra offerta di guarnizioni e ricambi per oleodinamica e pneumatica include raschiatori, guarnizioni stelo, pistone, statiche, o-ring (OR) e guarnizioni per alberi rotanti."
-            image=""
+            image="/images/boccola-guarnizioni.jpg"
             alt="" >}}
         </div>
       </div>
