--- a/content/servizi.html
+++ b/content/servizi.html
@@ -21,35 +21,30 @@ backgroundImage: "https://cdn.prod.website-files.com/64be7e6dc2a60cecdf209737/66
   <div class="relative pt-24 sm:pt-32">
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
       <div class="mx-auto max-w-4xl text-center">
-        <p class="text-base font-semibold leading-7 text-red-800">Manutenzione</p>
+        <p class="text-base font-semibold leading-7 text-red-700">Manutenzione</p>
         <h1 class="mt-2 text-4xl font-bold tracking-tight text-gray-900 sm:text-5xl">Revisione, riparazione ed upgrade di cilindri idraulici e pneumatici</h1>
         <p class="mt-8 text-base/7 leading-relaxed text-gray-700">La manutenzione di cilindri idraulici e pneumatici esistenti è il nostro core business e rappresenta la soluzione più veloce ed economica per ripristinare l’operatività dei vostri impianti.</p>
       </div>
+    </div>
 
-      <div class="mt-16">
-        <div class="flex flex-row overflow-x-auto space-x-8">
-          {{< text-and-image
-            text="Siamo in grado di offrire revisioni e riparazioni complete di cilindri idraulici e pneumatici di qualsiasi costruttore e tipologia: cilindri a semplice effetto e a pistone tuffante, cilindri a doppio effetto, cilindri telescopici o multi-stadio, capsule idrauliche, siano essi standard (ISO) o speciali."
-            image="/images/cilindri-idraulici.jpg"
-            alt="Riparazione cilindri idraulici e pneumatici" >}}
+    <div class="mt-8 lg:mt-16 px-6">
+      <div class="flex flex-row overflow-x-auto space-x-8">
+        {{< slide
+          text="Siamo in grado di offrire revisioni e riparazioni complete di cilindri idraulici e pneumatici di qualsiasi costruttore e tipologia: cilindri a semplice effetto e a pistone tuffante, cilindri a doppio effetto, cilindri telescopici o multi-stadio, capsule idrauliche, siano essi standard (ISO) o speciali."
+          image="/images/cilindri-idraulici.jpg" >}}
 
-          {{< text-and-image
-            text="Da una semplice revisione standard, che include un cambio guarnizioni ed una lucidatura dei principali componenti, a riparazioni avanzate che comprendono lavorazioni meccaniche su componenti esistenti, cromature a spessore e rifacimento di parti meccaniche quali ad esempio steli, camicie, pistoni, boccole, testate, fondelli, portasnodi."
-            image="/images/riparazione-cilindri.jpg"
-            alt="" >}}
+        {{< slide
+          text="Da una semplice revisione standard, che include un cambio guarnizioni ed una lucidatura dei principali componenti, a riparazioni avanzate che comprendono lavorazioni meccaniche su componenti esistenti, cromature a spessore e rifacimento di parti meccaniche quali ad esempio steli, camicie, pistoni, boccole, testate, fondelli, portasnodi."
+          image="/images/riparazione-cilindri.jpg" >}}
 
-          {{< text-and-image
-            text="Abbiamo esperienza in molte applicazioni e tipologie industriali: questo permette di offrire soluzioni garantite che aumentano i tempi di attività dei macchinari e riducono i costi complessivi, grazie ad elevati standard di qualità."
-            image="/images/cilindri-siderurgici.jpg"
-            alt="" >}}
+        {{< slide
+          text="Abbiamo esperienza in molte applicazioni e tipologie industriali: questo permette di offrire soluzioni garantite che aumentano i tempi di attività dei macchinari e riducono i costi complessivi, grazie ad elevati standard di qualità."
+          image="/images/cilindri-siderurgici.jpg" >}}
 
-          {{< text-and-image
-            text="Siamo consapevoli che i cilindri idraulici e pneumatici con prestazioni insufficienti o con perdite rappresentano un costo per la tua attività. Per questo motivo garantiamo riparazioni in urgenza di cilindri idraulici e pneumatici per ripartire il prima possibile con la produzione, incrementando allo stesso tempo la vita utile futura del cilindro."
-            image="/images/scudo.png"
-            alt="" >}}
-        </div>
+        {{< slide
+          text="Siamo consapevoli che i cilindri idraulici e pneumatici con prestazioni insufficienti o con perdite rappresentano un costo per la tua attività. Per questo motivo garantiamo riparazioni in urgenza di cilindri idraulici e pneumatici per ripartire il prima possibile con la produzione, incrementando allo stesso tempo la vita utile futura del cilindro."
+          image="/images/scudo.png" >}}
       </div>
-
     </div>
   </div>
 
@@ -100,19 +95,19 @@ backgroundImage: "https://cdn.prod.website-files.com/64be7e6dc2a60cecdf209737/66
 
       <div class="mt-16">
         <div class="flex flex-row overflow-x-auto space-x-8">
-          {{< text-and-image
+          {{< slide
             text="Realizziamo nuovi cilindri sia su nostri progetti sia partendo da un disegno fornito dal cliente oppure da un campione esistente: attraverso attività di reverse engineering siamo in grado di fornire, oltre al cilindro, anche i disegni costruttivi."
             image="/images/cilindro-sitema.jpg"
             alt="" >}}
-          {{< text-and-image
+          {{< slide
             text="Le fasi di produzione dei singoli componenti meccanici dei cilindri avvengono tutte all’interno della nostra sede situata in provincia di Torino, dotata di linee di taglio, tornitura, fresatura, foratura, saldatura, montaggio, collaudo e verniciatura."
             image="/images/pistoni-steli.jpg"
             alt="" >}}
-          {{< text-and-image
+          {{< slide
             text="Tutti i prodotti sono progettati, sviluppati, fabbricati e testati da tecnici esperti e qualificati, desiderosi di fornire ai nostri clienti i migliori cilindri idraulici e pneumatici disponibili sul mercato. Produciamo i vostri cilindri partendo da semilavorati in acciaio ed altre leghe di alta qualità, che provengono principalmente da fornitori italiani."
             image=""
             alt="" >}}
-          {{< text-and-image
+          {{< slide
             text="Il nostro parco macchine è in grado di fabbricare cilindri idraulici e pneumatici fino ad un alesaggio di Ø 400 mm e lunghezza 7.000 mm. Per alesaggi e lunghezze superiori, affidiamo in parte o totalmente a fornitori strategici esterni la fase produttiva dei singoli componenti, che verranno poi assemblati all’interno della nostra sede."
             image=""
             alt="" >}}
@@ -142,17 +137,17 @@ backgroundImage: "https://cdn.prod.website-files.com/64be7e6dc2a60cecdf209737/66
 
       <div class="mt-16">
         <div class="flex flex-row overflow-x-auto space-x-8">
-          {{< text-and-image
+          {{< slide
             text="Assistenza in stabilimento con strumentazione idonea per rilevazione dimensioni delle sedi, analisi campioni e supporto post-vendita ai vostri manutentori durante la fase di installazione delle guarnizioni."
             image="/images/cilindri-bilanciatori.jpg"
             alt="" >}}
 
-          {{< text-and-image
+          {{< slide
             text="Fornitura guarnizioni commerciali e tornite fino a 2500 mm di diametro, con possibilità di creare kit completi personalizzati, in materiali elastomerici, polimerici, plastici, PTFE e molti altri."
             image="/images/pacco-guarnizioni.jpg"
             alt="" >}}
 
-          {{< text-and-image
+          {{< slide
             text="La nostra offerta di guarnizioni e ricambi per oleodinamica e pneumatica include raschiatori, guarnizioni stelo, pistone, statiche, o-ring (OR) e guarnizioni per alberi rotanti."
             image="/images/boccola-guarnizioni.jpg"
             alt="" >}}
@@ -179,3 +174,6 @@ backgroundImage: "https://cdn.prod.website-files.com/64be7e6dc2a60cecdf209737/66
   </div>
 
 </section>
+
+
+{{< cta >}}
