--- a/content/about.html
+++ b/content/about.html
@@ -24,81 +24,77 @@ backgroundImage: ""
       </div>
     -->
 
-      <div class="relative grid grid-cols-1 gap-8 md:grid-cols-2 lg:grid-cols-3">
-        {{< card title="Manutenzione" text="Revisione, riparazione ed upgrade di cilindri idraulici e pneumatici" image="/images/riparazione-cilindri.jpg" >}}
-        {{< card title="Produzione" text="Progettazione, reverse engineering e fabbricazione di nuovi cilindri e componenti meccanici a disegno" image="/images/tornio-produzione.jpg" >}}
-        {{< card title="Ricambi" text="Assistenza sul campo e vendita di guarnizioni per cilindri e presse" image="/images/pacco-guarnizioni.jpg" >}}
+    <div class="relative grid grid-cols-1 gap-8 sm:grid-cols-2 lg:grid-cols-3">
+      {{< card title="Manutenzione" text="Revisione, riparazione ed upgrade di cilindri idraulici e pneumatici" image="/images/riparazione-cilindri.jpg" >}}
+      {{< card title="Produzione" text="Progettazione, reverse engineering e fabbricazione di nuovi cilindri e componenti meccanici a disegno" image="/images/tornio-produzione.jpg" >}}
+      {{< card title="Ricambi" text="Assistenza sul campo e vendita di guarnizioni per cilindri e presse" image="/images/pacco-guarnizioni.jpg" >}}
+    </div>
+
+    <div class="mt-8 lg:mt-16 text-center">
+      <a class="inline-flex items-center justify-center p-2 sm:px-4 border text-gray-800 border-gray-800 rounded-lg font-semibold" href="/servizi">
+        <span>Scopri di più</span>
+        <svg class="w-3.5 h-3.5 ml-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+        </svg>
+      </a>
+    </div>
+  </div>
+</div>
+</section>
+
+
+<!-- Perchè scegliere Centro Cilindri -->
+<section>
+  <div class="relative py-24 sm:py-32 bg-blue">
+    <div class="mx-auto max-w-7xl px-6 lg:px-8">
+      <div class="mx-auto max-w-4xl text-center">
+        <h1 class="text-4xl sm:text-5xl font-bold tracking-tight text-gray-100">Perchè scegliere <span class="inline-block whitespace-nowrap">Centro Cilindri</span></h1>
       </div>
 
-      <div class="mt-8 lg:mt-16 text-center">
-        <a class="inline-flex items-center justify-center p-2 sm:px-4 border text-gray-800 border-gray-800 rounded-lg font-semibold" href="/servizi">
-          <span>Scopri di più</span>
-          <svg class="w-3.5 h-3.5 ml-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
-            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
-          </svg>
-        </a>
+      <div class="relative mt-8 lg:mt-16 grid grid-cols-1 gap-8 sm:grid-cols-2 lg:grid-cols-3">
+        <div>
+          <h4 class="mb-2 text-xl sm:text-2xl font-semibold tracking-tight text-gray-100">Unico fornitore</h4>
+          <p class="text-base/7 leading-relaxed text-gray-300">Siamo il partner ideale per l’intero ciclo di vita dei cilindri, che include progettazione, fabbricazione, assistenza, manutenzione, fornitura guarnizioni e ricambi, offriamo soluzioni per ogni contesto ed esigenza.</p>
+        </div>
+        <div>
+          <h4 class="mb-2 text-xl sm:text-2xl font-semibold tracking-tight text-gray-100">Assistenza tecnica specializzata</h4>
+          <p class="text-base/7 leading-relaxed text-gray-300">Il servizio di assistenza è composto da tecnici qualificati pronti a fornire consigli su misura, eseguire manutenzioni nella nostra officina, effettuare sopralluoghi, e supportare il cliente nelle fasi operative.</p>
+        </div>
+        <div>
+          <h4 class="mb-2 text-xl sm:text-2xl font-semibold tracking-tight text-gray-100">Esperienza e competenza</h4>
+          <p class="text-base/7 leading-relaxed text-gray-300">Siamo sempre motivati a scegliere il servizio o il prodotto idoneo per l’applicazione del cliente, grazie ad una profonda conoscenza dei processi produttivi industriali ed elevate competenze in applicazioni critiche.</p>
+        </div>
       </div>
     </div>
   </div>
 </section>
 
-
-<!-- Perchè scegliere Centro Cilindri -->
-<div class="relative isolate overflow-hidden px-6 py-24 sm:py-32 lg:overflow-visible lg:px-0">
-  <div class="mx-auto grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 lg:mx-0 lg:max-w-none lg:grid-cols-2 lg:items-start lg:gap-y-10">
-    <div class="lg:col-span-2 lg:col-start-1 lg:row-start-1 lg:mx-auto lg:grid lg:w-full lg:max-w-7xl lg:grid-cols-2 lg:gap-x-8 lg:px-8">
-      <div class="lg:pr-4">
-        <div class="lg:max-w-lg">
-          <h1 class="mt-2 text-pretty text-4xl font-semibold tracking-tight text-gray-900 sm:text-5xl">Perchè scegliere <span class="inline-block whitespace-nowrap">Centro Cilindri</span></h1>
-        </div>
+<!-- Settori industriali -->
+<section>
+  <div class="relative py-24 sm:py-32">
+    <div class="mx-auto max-w-7xl px-6 lg:px-8">
+      <div class="mx-auto max-w-4xl text-center">
+        <h1 class="text-4xl sm:text-5xl font-bold tracking-tight text-gray-900">Settori industriali</h1>
       </div>
-    </div>
-    <div class="-ml-12 -mt-12 p-12 lg:sticky lg:top-4 lg:col-start-2 lg:row-span-2 lg:row-start-1 lg:overflow-hidden">
-      <img class="w-[28rem] max-w-none rounded-xl bg-gray-900 shadow-xl" src="/images/lavoro.jpg" alt="">
-    </div>
-    <div class="lg:col-span-2 lg:col-start-1 lg:row-start-2 lg:mx-auto lg:grid lg:w-full lg:max-w-7xl lg:grid-cols-2 lg:gap-x-8 lg:px-8">
-      <div class="lg:pr-4">
-        <div class="max-w-xl text-base/7 text-gray-700 lg:max-w-lg">
-          <ul role="list" class="space-y-8">
-            <li>
-              <h4 class="mb-2 text-xl sm:text-2xl font-semibold tracking-tight text-gray-900">Unico fornitore</h4>
-              <p class="text-gray-600">Siamo il partner ideale per l’intero ciclo di vita dei cilindri, che include progettazione, fabbricazione, assistenza, manutenzione, fornitura guarnizioni e ricambi, offriamo soluzioni per ogni contesto ed esigenza.</p>
-            </li>
-            <li>
-              <h4 class="mb-2 text-xl sm:text-2xl font-semibold tracking-tight text-gray-900">Assistenza tecnica specializzata</h4>
-              <p class="text-gray-600">Il servizio di assistenza è composto da tecnici qualificati pronti a fornire consigli su misura, eseguire manutenzioni nella nostra officina, effettuare sopralluoghi, e supportare il cliente nelle fasi operative.</p>
-            </li>
-            <li>
-              <h4 class="mb-2 text-xl sm:text-2xl font-semibold tracking-tight text-gray-900">Esperienza e competenza</h4>
-              <p class="text-gray-600">Siamo sempre motivati a scegliere il servizio o il prodotto idoneo per l’applicazione del cliente, grazie ad una profonda conoscenza dei processi produttivi industriali ed elevate competenze in applicazioni critiche.</p>
-            </li>
+
+      <div class="mt-8 lg:mt-16">
+        <div class="prose">
+          <p class="mb-8">Siamo specializzati in servizi ad alto valore aggiunto per cilindri idraulici e pneumatici di aziende che operano nei seguenti settori industriali:</p>
+          <ul>
+            <li>Metallurgia (produzione di semilavorati piani e lunghi in acciaio e alluminio)</li>
+            <li>Stampaggio acciaio ed alluminio a freddo</li>
+            <li>Produzione pneumatici</li>
+            <li>Forgiatura</li>
+            <li>Pressofusione alluminio ed altre leghe</li>
+            <li>Stampaggio materie plastiche</li>
+            <li>Produzione pannelli e laminati base legno</li>
+            <li>Produzione energia da fonti rinnovabili</li>
+            <li>Gestione rifiuti</li>
+            <li>Idraulica mobile</li>
           </ul>
         </div>
       </div>
     </div>
-  </div>
-</div>
-
-
-<!-- Settori industriali -->
-<section class="max-w-screen-xl mx-auto bg-slate-800">
-  <div class="py-8 sm:py-16 lg:py-24 px-4 sm:px-8 lg:px-16">
-  <h2 class="text-4xl md:text-5xl lg:text-6xl mb-4 lg:mb-8 font-semibold leading-none tracking-tight text-white text-center">Settori industriali</h2>
-  <div class="prose text-gray-300">
-    <p class="mb-8">Siamo specializzati in servizi ad alto valore aggiunto per cilindri idraulici e pneumatici di aziende che operano nei seguenti settori industriali:</p>
-    <ul>
-      <li>Metallurgia (produzione di semilavorati piani e lunghi in acciaio e alluminio)</li>
-      <li>Stampaggio acciaio ed alluminio a freddo</li>
-      <li>Produzione pneumatici</li>
-      <li>Forgiatura</li>
-      <li>Pressofusione alluminio ed altre leghe</li>
-      <li>Stampaggio materie plastiche</li>
-      <li>Produzione pannelli e laminati base legno</li>
-      <li>Produzione energia da fonti rinnovabili</li>
-      <li>Gestione rifiuti</li>
-      <li>Idraulica mobile</li>
-    </ul>
-  </div>
   </div>
 </section>
 
