--- a/content/chi-siamo.html
+++ b/content/chi-siamo.html
@@ -5,92 +5,119 @@ backgroundImage: ""
 ---
 
 <!-- Intro -->
-<div class="relative py-24 sm:py-32 bg-black">
+<div class="relative py-24 sm:py-32">
   <div class="mx-auto max-w-7xl px-6 lg:px-8">
-    <div class="mx-auto max-w-4xl text-xl md:text-2xl lg:text-3xl text-center font-light text-gray-200 tracking-tight">
-      <p class="mb-8 lg:mb-16">Supportiamo le imprese industriali con servizi di <span class="font-medium text-red-700">riparazione e manutenzione</span> di cilindri idraulici e pneumatici esistenti, con la <span class="font-medium text-red-700">progettazione e costruzione</span> interna di nuovi cilindri a campione o disegno, proponendo eventuali upgrade. Offriamo inoltre <span class="font-medium text-red-700">assistenza sul campo e vendita</span> guarnizioni di tenuta per cilindri e presse.</p>
+    <div class="mx-auto max-w-4xl text-lg sm:text-xl/8 text-gray-700 text-center tracking-tight">
+      <p class="mb-6 lg:mb-12">Supportiamo le imprese industriali con servizi di <span class="font-medium text-red-700">riparazione e manutenzione</span> di cilindri idraulici e pneumatici esistenti, con la <span class="font-medium text-red-700">progettazione e costruzione</span> interna di nuovi cilindri a campione o disegno, proponendo eventuali upgrade. Offriamo inoltre <span class="font-medium text-red-700">assistenza sul campo</span> e <span class="font-medium text-red-700">vendita guarnizioni di tenuta</span> per cilindri e presse.</p>
       <p>Il nostro principale obiettivo è quello di creare <span class="font-medium text-red-700">relazioni a lungo termine</span> con i clienti per sviluppare insieme programmi di riduzione dei costi, eliminazione perdite e lunghi fermi macchina attraverso l'aumento dell’affidabilità e del rendimento dei cilindri.</p>
     </div>
   </div>
 </div>
 
+{{< cta >}}
+
+
 <!-- Aree di competenza -->
 <section>
   <div class="relative py-24 sm:py-32">
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
-      <!--
       <div class="mx-auto max-w-4xl text-center">
-        <h1 class="text-4xl sm:text-5xl font-bold tracking-tight text-gray-900">Le nostre aree di competenza</h1>
+        <h2 class="text-4xl sm:text-5xl lg:text-6xl font-bold text-slate-900 tracking-tight">Le nostre aree di competenza</h2>
       </div>
-    -->
 
-    <div class="relative grid grid-cols-1 gap-8 sm:grid-cols-2 lg:grid-cols-3">
+    <div class="mt-8 lg:mt-16 relative grid grid-cols-1 gap-8 sm:grid-cols-2 lg:grid-cols-3">
       {{< card title="Manutenzione" text="Revisione, riparazione ed upgrade di cilindri idraulici e pneumatici" image="/images/riparazione-cilindri.jpg" >}}
       {{< card title="Produzione" text="Progettazione, reverse engineering e fabbricazione di nuovi cilindri e componenti meccanici a disegno" image="/images/tornio-produzione.jpg" >}}
       {{< card title="Ricambi" text="Assistenza sul campo e vendita di guarnizioni per cilindri e presse" image="/images/pacco-guarnizioni.jpg" >}}
     </div>
 
     <div class="mt-8 lg:mt-16 text-center">
-      <a class="inline-flex items-center justify-center p-2 sm:px-4 border text-gray-800 border-gray-800 rounded-lg font-semibold" href="/servizi">
+      <a class="inline-flex items-center justify-center py-3 px-4 border text-sm text-white font-semibold bg-red-700 border-red-700 hover:bg-red-600 rounded-lg" href="/servizi">
         <span>Scopri di più</span>
-        <svg class="w-3.5 h-3.5 ml-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
-          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
-        </svg>
+        <svg class="w-4 ml-2" class="feather feather-arrow-up-right" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24"><path d="M7 17 17 7M7 7h10v10"/></svg>
       </a>
     </div>
   </div>
 </div>
 </section>
 
+{{< cta >}}
 
 <!-- Perchè scegliere Centro Cilindri -->
-<section>
-  <div class="relative py-24 sm:py-32 bg-blue">
-    <div class="mx-auto max-w-7xl px-6 lg:px-8">
-      <div class="mx-auto max-w-4xl text-center">
-        <h1 class="text-4xl sm:text-5xl font-bold tracking-tight text-gray-100">Perchè scegliere <span class="inline-block whitespace-nowrap">Centro Cilindri</span></h1>
-      </div>
-
-      <div class="relative mt-8 lg:mt-16 grid grid-cols-1 gap-8 sm:grid-cols-2 lg:grid-cols-3">
-        <div>
-          <h4 class="mb-2 text-xl sm:text-2xl font-semibold tracking-tight text-gray-100">Unico fornitore</h4>
-          <p class="text-base/7 leading-relaxed text-gray-300">Siamo il partner ideale per l’intero ciclo di vita dei cilindri, che include progettazione, fabbricazione, assistenza, manutenzione, fornitura guarnizioni e ricambi, offriamo soluzioni per ogni contesto ed esigenza.</p>
-        </div>
-        <div>
-          <h4 class="mb-2 text-xl sm:text-2xl font-semibold tracking-tight text-gray-100">Assistenza tecnica specializzata</h4>
-          <p class="text-base/7 leading-relaxed text-gray-300">Il servizio di assistenza è composto da tecnici qualificati pronti a fornire consigli su misura, eseguire manutenzioni nella nostra officina, effettuare sopralluoghi, e supportare il cliente nelle fasi operative.</p>
-        </div>
-        <div>
-          <h4 class="mb-2 text-xl sm:text-2xl font-semibold tracking-tight text-gray-100">Esperienza e competenza</h4>
-          <p class="text-base/7 leading-relaxed text-gray-300">Siamo sempre motivati a scegliere il servizio o il prodotto idoneo per l’applicazione del cliente, grazie ad una profonda conoscenza dei processi produttivi industriali ed elevate competenze in applicazioni critiche.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- Settori industriali -->
 <section>
   <div class="relative py-24 sm:py-32">
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
       <div class="mx-auto max-w-4xl text-center">
-        <h1 class="text-4xl sm:text-5xl font-bold tracking-tight text-gray-900">Settori industriali</h1>
+        <h2 class="text-4xl sm:text-5xl lg:text-6xl font-bold text-slate-900 tracking-tight">Perchè scegliere <span class="inline-block whitespace-nowrap">Centro Cilindri</span></h2>
       </div>
 
-      <div class="mt-8 lg:mt-16">
-        <div class="prose">
-          <p class="mb-8">Siamo specializzati in servizi ad alto valore aggiunto per cilindri idraulici e pneumatici di aziende che operano nei seguenti settori industriali:</p>
-          <ul>
-            <li>Metallurgia (produzione di semilavorati piani e lunghi in acciaio e alluminio)</li>
+      <div class="relative mx-auto max-w-4xl mt-8 lg:mt-16 grid grid-cols-1 gap-8 lg:max-w-none lg:grid-cols-3">
+        <div class="flex">
+          <div class="p-0.5">
+            <svg class="w-10 h-10 shrink-0 transform-cpu rounded-lg shadow-md shadow-indigo-500/[.12]" viewBox="0 0 40 40" fill="none" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M.75 8A7.25 7.25 0 018 .75h24A7.25 7.25 0 0139.25 8v24A7.25 7.25 0 0132 39.25H8A7.25 7.25 0 01.75 32V8z" class="fill-indigo-50 stroke-indigo-500"></path><path d="M27 25.335L30.25 27l-6.603 3.382a8 8 0 01-7.294 0L9.75 27 13 25.335m14-6.999L30.25 20l-6.603 3.382a8 8 0 01-7.294 0L9.75 20 13 18.336" class="stroke-indigo-500/50"></path><path d="M9.75 13l9.338-4.783a2 2 0 011.824 0L30.25 13l-6.603 3.382a8 8 0 01-7.294 0L9.75 13z" class="stroke-indigo-500"></path></svg>
+          </div>
+          <div class="ml-6">
+            <h2 class="text-base sm:text-lg font-semibold text-slate-900">Unico fornitore</h2>
+            <p class="mt-2 text-base/7 text-slate-700">Siamo il partner ideale per l’intero ciclo di vita dei cilindri, che include progettazione, fabbricazione, assistenza, manutenzione, fornitura guarnizioni e ricambi, offriamo soluzioni per ogni contesto ed esigenza.</p>
+          </div>
+        </div>
+
+        <div class="flex">
+          <div class="p-0.5">
+            <svg class="w-10 h-10 shrink-0 transform-cpu rounded-lg shadow-md shadow-indigo-500/[.12]" viewBox="0 0 40 40" fill="none" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M.75 8A7.25 7.25 0 018 .75h24A7.25 7.25 0 0139.25 8v24A7.25 7.25 0 0132 39.25H8A7.25 7.25 0 01.75 32V8z" class="fill-indigo-50 stroke-indigo-500"></path><path d="M27 25.335L30.25 27l-6.603 3.382a8 8 0 01-7.294 0L9.75 27 13 25.335m14-6.999L30.25 20l-6.603 3.382a8 8 0 01-7.294 0L9.75 20 13 18.336" class="stroke-indigo-500/50"></path><path d="M9.75 13l9.338-4.783a2 2 0 011.824 0L30.25 13l-6.603 3.382a8 8 0 01-7.294 0L9.75 13z" class="stroke-indigo-500"></path></svg>
+          </div>
+          <div class="ml-6">
+            <h2 class="text-base sm:text-lg font-semibold text-slate-900 tracking-tight">Assistenza tecnica specializzata</h2>
+            <p class="mt-2 text-base/7 text-slate-700">Il servizio di assistenza è composto da tecnici qualificati pronti a fornire consigli su misura, eseguire manutenzioni nella nostra officina, effettuare sopralluoghi, e supportare il cliente nelle fasi operative.</p>
+          </div>
+        </div>
+
+        <div class="flex">
+          <div class="p-0.5">
+            <svg class="w-10 h-10 shrink-0 transform-cpu rounded-lg shadow-md shadow-indigo-500/[.12]" viewBox="0 0 40 40" fill="none" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M.75 8A7.25 7.25 0 018 .75h24A7.25 7.25 0 0139.25 8v24A7.25 7.25 0 0132 39.25H8A7.25 7.25 0 01.75 32V8z" class="fill-indigo-50 stroke-indigo-500"></path><path d="M27 25.335L30.25 27l-6.603 3.382a8 8 0 01-7.294 0L9.75 27 13 25.335m14-6.999L30.25 20l-6.603 3.382a8 8 0 01-7.294 0L9.75 20 13 18.336" class="stroke-indigo-500/50"></path><path d="M9.75 13l9.338-4.783a2 2 0 011.824 0L30.25 13l-6.603 3.382a8 8 0 01-7.294 0L9.75 13z" class="stroke-indigo-500"></path></svg>
+          </div>
+          <div class="ml-6">
+            <h2 class="text-base sm:text-lg font-semibold text-slate-900 tracking-tight">Esperienza e competenza</h2>
+            <p class="mt-2 text-base/7 text-slate-700">Siamo sempre motivati a scegliere il servizio o il prodotto idoneo per l’applicazione del cliente, grazie ad una profonda conoscenza dei processi produttivi industriali ed elevate competenze in applicazioni critiche.</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+{{< cta >}}
+
+<!-- I nostri clienti -->
+<section>
+  <div class="relative py-24 sm:py-32">
+    <div class="mx-auto max-w-7xl px-6 lg:px-8">
+      <div class="mx-auto max-w-4xl text-center">
+        <h2 class="text-4xl sm:text-5xl lg:text-6xl font-bold text-slate-900 tracking-tight">I nostri clienti</h2>
+        <p class="mt-8 text-pretty text-lg text-gray-800 sm:text-xl/8">Siamo specializzati in servizi ad alto valore aggiunto per cilindri idraulici e pneumatici di aziende che operano nei seguenti settori:</p>
+      </div>
+
+      <div class="relative mx-auto mt-8 lg:mt-16 grid grid-cols-1 gap-8 lg:grid-cols-2">
+        <div class="relative overflow-hidden p-6 lg:p-8 lg:p-12 rounded-2xl bg-slate-800 text-gray-200">
+          <p class="text-xl sm:text-2xl font-semibold tracking-tight text-gray-200">Industria</p>
+          <ul role="list" class="mt-8 space-y-2 text-base/7 text-gray-300">
+            <li>Metallurgia</li>
             <li>Stampaggio acciaio ed alluminio a freddo</li>
-            <li>Produzione pneumatici</li>
             <li>Forgiatura</li>
-            <li>Pressofusione alluminio ed altre leghe</li>
+            <li>Pressofusione ed estrusione alluminio ed altre leghe</li>
+            <li>Produzione pneumatici</li>
             <li>Stampaggio materie plastiche</li>
             <li>Produzione pannelli e laminati base legno</li>
-            <li>Produzione energia da fonti rinnovabili</li>
-            <li>Gestione rifiuti</li>
-            <li>Idraulica mobile</li>
+          </ul>
+        </div>
+
+        <div class="relative overflow-hidden p-6 lg:p-8 lg:p-12 rounded-2xl bg-slate-800 text-gray-200">
+          <p class="text-xl sm:text-2xl font-semibold tracking-tight text-gray-200">Multi-utility</p>
+          <ul role="list" class="mt-8 space-y-2 text-base/7 text-gray-300">
+            <li>Produzione energia</li>
+            <li>Servizio idrico integrato</li>
+            <li>Raccolta, trattamento e smaltimento rifiuti</li>
           </ul>
         </div>
       </div>
@@ -99,3 +126,4 @@ backgroundImage: ""
 </section>
 
 {{< cta >}}
+
