--- a/content/servizi.html
+++ b/content/servizi.html
@@ -21,8 +21,8 @@ backgroundImage: "https://cdn.prod.website-files.com/64be7e6dc2a60cecdf209737/66
   <div class="relative pt-24 sm:pt-32">
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
       <div class="mx-auto max-w-4xl text-center">
-        <p class="text-base font-semibold leading-7 text-red-700">Manutenzione</p>
-        <h1 class="mt-2 text-4xl font-bold tracking-tight text-gray-900 sm:text-5xl">Revisione, riparazione ed upgrade di cilindri idraulici e pneumatici</h1>
+        <p class="text-lg/7 font-semibold text-red-700">Manutenzione</p>
+        <h1 class="mt-2 text-4xl sm:text-5xl lg:text-6xl font-bold text-slate-900 tracking-tight">Revisione, riparazione ed upgrade di cilindri idraulici e pneumatici</h1>
         <p class="mt-8 text-base/7 leading-relaxed text-gray-700">La manutenzione di cilindri idraulici e pneumatici esistenti è il nostro core business e rappresenta la soluzione più veloce ed economica per ripristinare l’operatività dei vostri impianti.</p>
       </div>
     </div>
@@ -47,6 +47,25 @@ backgroundImage: "https://cdn.prod.website-files.com/64be7e6dc2a60cecdf209737/66
       </div>
     </div>
   </div>
+
+
+  <div class="mt-16 relative isolate overflow-hidden bg-gray-800 py-24 sm:py-32">
+    <div class="hidden sm:absolute sm:-top-10 sm:right-1/2 sm:-z-10 sm:mr-10 sm:block sm:transform-gpu sm:blur-3xl" aria-hidden="true">
+      <div class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-tr from-[#0c3f66] to-[#3e80cb] opacity-20" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
+    </div>
+    <div class="absolute -top-52 left-1/2 -z-10 -translate-x-1/2 transform-gpu blur-3xl sm:top-[-28rem] sm:ml-16 sm:translate-x-0 sm:transform-gpu" aria-hidden="true">
+      <div class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-tr from-[#0c3f66] to-[#3e80cb] opacity-20" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
+    </div>
+    <div class="mx-auto max-w-7xl px-6 lg:px-8">
+      <div class="mx-auto max-w-2xl lg:mx-0">
+        <h2 class="text-3xl font-bold tracking-tight text-white sm:text-4xl">Urgenze o impianto fermo?</h2>
+        <p class="mt-6 text-base sm:text-lg leading-8 text-gray-300">Garantiamo riparazioni in urgenza di cilindri idraulici e pneumatici per ripartire il prima possibile con la produzione, incrementando allo stesso tempo la vita utile futura del cilindro.
+Grazie alla rete di partner strategici possiamo inoltre fornire guarnizioni tornite in 24 ore fino a 1400 mm di diametro esterno*</p>
+        <p class="mt-6 text-xs font-normal text-gray-300">*da verificare in base alla disponibilità produttiva dei fornitori</p>
+      </div>
+    </div>
+  </div>
+
 
   <div class="relative isolate overflow-hidden bg-white px-6 py-24 sm:py-32 lg:overflow-visible lg:px-0" id="digital-service">
     <div class="mx-auto grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 lg:mx-0 lg:max-w-none lg:grid-cols-2 lg:items-start lg:gap-y-10">
@@ -157,21 +176,6 @@ backgroundImage: "https://cdn.prod.website-files.com/64be7e6dc2a60cecdf209737/66
     </div>
   </div>
 
-  <div class="relative isolate overflow-hidden bg-gray-800 py-24 sm:py-32">
-    <div class="hidden sm:absolute sm:-top-10 sm:right-1/2 sm:-z-10 sm:mr-10 sm:block sm:transform-gpu sm:blur-3xl" aria-hidden="true">
-      <div class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-tr from-[#0c3f66] to-[#3e80cb] opacity-20" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
-    </div>
-    <div class="absolute -top-52 left-1/2 -z-10 -translate-x-1/2 transform-gpu blur-3xl sm:top-[-28rem] sm:ml-16 sm:translate-x-0 sm:transform-gpu" aria-hidden="true">
-      <div class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-tr from-[#0c3f66] to-[#3e80cb] opacity-20" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
-    </div>
-    <div class="mx-auto max-w-7xl px-6 lg:px-8">
-      <div class="mx-auto max-w-2xl lg:mx-0">
-        <h2 class="text-3xl font-bold tracking-tight text-white sm:text-4xl">Urgenze o impianto fermo?</h2>
-        <p class="mt-6 text-base sm:text-lg leading-8 text-gray-300">Grazie alla rete di partner strategici possiamo fornire guarnizioni tornite in 24 ore fino a 1400 mm di diametro esterno*</p>
-        <p class="mt-6 text-xs font-normal text-gray-300">*da verificare in base alla disponibilità produttiva dei fornitori</p>
-      </div>
-    </div>
-  </div>
 
 </section>
 
