--- a/content/servizi.html
+++ b/content/servizi.html
@@ -21,33 +21,26 @@ backgroundImage: "https://cdn.prod.website-files.com/64be7e6dc2a60cecdf209737/66
   <div class="relative pt-24 sm:pt-32">
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
       <div class="mx-auto max-w-4xl text-center">
-        <p class="text-lg/7 font-semibold text-red-700">Manutenzione</p>
+        <p class="text-lg/7 sm:text-xl font-semibold tracking-tight text-red-700">Manutenzione</p>
         <h1 class="mt-2 text-4xl sm:text-5xl lg:text-6xl font-bold text-slate-900 tracking-tight">Revisione, riparazione ed upgrade di cilindri idraulici e pneumatici</h1>
-        <p class="mt-8 text-base/7 leading-relaxed text-gray-700">La manutenzione di cilindri idraulici e pneumatici esistenti è il nostro core business e rappresenta la soluzione più veloce ed economica per ripristinare l’operatività dei vostri impianti.</p>
-      </div>
-    </div>
-
-    <div class="mt-8 lg:mt-16 px-6">
-      <div class="flex flex-row overflow-x-auto space-x-8">
-        {{< slide
-          text="Siamo in grado di offrire revisioni e riparazioni complete di cilindri idraulici e pneumatici di qualsiasi costruttore e tipologia: cilindri a semplice effetto e a pistone tuffante, cilindri a doppio effetto, cilindri telescopici o multi-stadio, capsule idrauliche, siano essi standard (ISO) o speciali."
-          image="/images/cilindri-idraulici.jpg" >}}
-
-        {{< slide
-          text="Da una semplice revisione standard, che include un cambio guarnizioni ed una lucidatura dei principali componenti, a riparazioni avanzate che comprendono lavorazioni meccaniche su componenti esistenti, cromature a spessore e rifacimento di parti meccaniche quali ad esempio steli, camicie, pistoni, boccole, testate, fondelli, portasnodi."
-          image="/images/riparazione-cilindri.jpg" >}}
-
-        {{< slide
-          text="Abbiamo esperienza in molte applicazioni e tipologie industriali: questo permette di offrire soluzioni garantite che aumentano i tempi di attività dei macchinari e riducono i costi complessivi, grazie ad elevati standard di qualità."
-          image="/images/cilindri-siderurgici.jpg" >}}
-
-        {{< slide
-          text="Siamo consapevoli che i cilindri idraulici e pneumatici con prestazioni insufficienti o con perdite rappresentano un costo per la tua attività. Per questo motivo garantiamo riparazioni in urgenza di cilindri idraulici e pneumatici per ripartire il prima possibile con la produzione, incrementando allo stesso tempo la vita utile futura del cilindro."
-          image="/images/scudo.png" >}}
+        <p class="mt-8 text-base/6 text-slate-600">La manutenzione di cilindri idraulici e pneumatici esistenti è il nostro core business e rappresenta la soluzione più veloce ed economica per ripristinare l’operatività dei vostri impianti.</p>
       </div>
     </div>
   </div>
 
+  <div class="mt-16 carousel">
+    {{< slide
+      text="Siamo in grado di offrire revisioni e riparazioni complete di cilindri idraulici e pneumatici di qualsiasi costruttore e tipologia: cilindri a semplice effetto e a pistone tuffante, cilindri a doppio effetto, cilindri telescopici o multi-stadio, capsule idrauliche, siano essi standard (ISO) o speciali."
+      image="/images/cilindro-sitema.jpg" >}}
+
+    {{< slide
+      text="Da una semplice revisione standard, che include un cambio guarnizioni ed una lucidatura dei principali componenti, a riparazioni avanzate che comprendono lavorazioni meccaniche su componenti esistenti, cromature a spessore e rifacimento di parti meccaniche quali ad esempio steli, camicie, pistoni, boccole, testate, fondelli, portasnodi."
+      image="/images/riparazione-cilindri.jpg" >}}
+
+    {{< slide
+      text="Abbiamo esperienza in molte applicazioni e tipologie industriali: questo permette di offrire soluzioni garantite che aumentano i tempi di attività dei macchinari e riducono i costi complessivi, grazie ad elevati standard di qualità."
+      image="/images/cilindri-siderurgici.jpg" >}}
+  </div>
 
   <div class="mt-16 relative isolate overflow-hidden bg-gray-800 py-24 sm:py-32">
     <div class="hidden sm:absolute sm:-top-10 sm:right-1/2 sm:-z-10 sm:mr-10 sm:block sm:transform-gpu sm:blur-3xl" aria-hidden="true">
@@ -65,7 +58,6 @@ Grazie alla rete di partner strategici possiamo inoltre fornire guarnizioni torn
       </div>
     </div>
   </div>
-
 
   <div class="relative isolate overflow-hidden bg-white px-6 py-24 sm:py-32 lg:overflow-visible lg:px-0" id="digital-service">
     <div class="mx-auto grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 lg:mx-0 lg:max-w-none lg:grid-cols-2 lg:items-start lg:gap-y-10">
@@ -96,86 +88,71 @@ Grazie alla rete di partner strategici possiamo inoltre fornire guarnizioni torn
 <!-- Produzione -->
 <section id="produzione">
 
-  <div class="relative isolate overflow-hidden pb-24 sm:pb-32">
-    <!--
-    <div class="hidden sm:absolute sm:-top-10 sm:right-1/2 sm:-z-10 sm:mr-10 sm:block sm:transform-gpu sm:blur-3xl" aria-hidden="true">
-      <div class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-tr from-[#0c3f66] to-[#3e80cb] opacity-20" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
-    </div>
-    <div class="absolute -top-52 left-1/2 -z-10 -translate-x-1/2 transform-gpu blur-3xl sm:top-[-28rem] sm:ml-16 sm:translate-x-0 sm:transform-gpu" aria-hidden="true">
-      <div class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-tr from-[#0c3f66] to-[#3e80cb] opacity-20" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
-    </div>
-  -->
+  <div class="relative isolate overflow-hidden py-24 sm:py-32">
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
       <div class="mx-auto max-w-3xl lg:text-center">
-        <h2 class="text-base font-semibold leading-7 text-red-800">Produzione</h2>
-        <p class="mt-2 text-4xl font-bold tracking-tight text-gray-900 sm:text-5xl">Progettazione, reverse engineering e costruzione di nuovi cilindri e componenti meccanici a disegno</p>
-        <p class="mt-6 text-base/7 leading-relaxed text-gray-700">Siamo in grado di progettare e fabbricare cilindri idraulici e pneumatici di qualsiasi tipologia: cilindri a semplice effetto e a pistone tuffante, cilindri a doppio effetto, cilindri telescopici o multi-stadio, capsule idrauliche, cilindri secondo standard ISO o speciali.</p>
+        <h2 class="text-lg/7 sm:text-xl font-semibold tracking-tight text-red-700">Produzione</h2>
+        <p class="mt-2 text-4xl sm:text-5xl lg:text-6xl font-bold text-slate-900 tracking-tight">Progettazione, reverse engineering e costruzione di nuovi cilindri e componenti meccanici</p>
+        <p class="mt-6 text-base/6 text-slate-600">Siamo in grado di progettare e fabbricare cilindri idraulici e pneumatici di qualsiasi tipologia: cilindri a semplice effetto e a pistone tuffante, cilindri a doppio effetto, cilindri telescopici o multi-stadio, capsule idrauliche, cilindri secondo standard ISO o speciali.</p>
       </div>
-
-      <div class="mt-16">
-        <div class="flex flex-row overflow-x-auto space-x-8">
-          {{< slide
-            text="Realizziamo nuovi cilindri sia su nostri progetti sia partendo da un disegno fornito dal cliente oppure da un campione esistente: attraverso attività di reverse engineering siamo in grado di fornire, oltre al cilindro, anche i disegni costruttivi."
-            image="/images/cilindro-sitema.jpg"
-            alt="" >}}
-          {{< slide
-            text="Le fasi di produzione dei singoli componenti meccanici dei cilindri avvengono tutte all’interno della nostra sede situata in provincia di Torino, dotata di linee di taglio, tornitura, fresatura, foratura, saldatura, montaggio, collaudo e verniciatura."
-            image="/images/pistoni-steli.jpg"
-            alt="" >}}
-          {{< slide
-            text="Tutti i prodotti sono progettati, sviluppati, fabbricati e testati da tecnici esperti e qualificati, desiderosi di fornire ai nostri clienti i migliori cilindri idraulici e pneumatici disponibili sul mercato. Produciamo i vostri cilindri partendo da semilavorati in acciaio ed altre leghe di alta qualità, che provengono principalmente da fornitori italiani."
-            image=""
-            alt="" >}}
-          {{< slide
-            text="Il nostro parco macchine è in grado di fabbricare cilindri idraulici e pneumatici fino ad un alesaggio di Ø 400 mm e lunghezza 7.000 mm. Per alesaggi e lunghezze superiori, affidiamo in parte o totalmente a fornitori strategici esterni la fase produttiva dei singoli componenti, che verranno poi assemblati all’interno della nostra sede."
-            image=""
-            alt="" >}}
-        </div>
-      </div>
-
     </div>
   </div>
 
+  <div class="carousel mb-16">
+    {{< slide
+      text="Realizziamo nuovi cilindri sia su nostri progetti sia partendo da un disegno fornito dal cliente oppure da un campione esistente: attraverso attività di reverse engineering siamo in grado di fornire, oltre al cilindro, anche i disegni costruttivi."
+      image="/images/cilindro-sitema.jpg"
+      alt="" >}}
+    {{< slide
+      text="Le fasi di produzione dei singoli componenti meccanici dei cilindri avvengono tutte all’interno della nostra sede situata in provincia di Torino, dotata di linee di taglio, tornitura, fresatura, foratura, saldatura, montaggio, collaudo e verniciatura."
+      image="/images/pistoni-steli.jpg"
+      alt="" >}}
+    {{< slide
+      text="Tutti i prodotti sono progettati, sviluppati, fabbricati e testati da tecnici esperti e qualificati, desiderosi di fornire ai nostri clienti i migliori cilindri idraulici e pneumatici disponibili sul mercato. Produciamo i vostri cilindri partendo da semilavorati in acciaio ed altre leghe di alta qualità, che provengono principalmente da fornitori italiani."
+      image=""
+      alt="" >}}
+    {{< slide
+      text="Il nostro parco macchine è in grado di fabbricare cilindri idraulici e pneumatici fino ad un alesaggio di Ø 400 mm e lunghezza 7.000 mm. Per alesaggi e lunghezze superiori, affidiamo in parte o totalmente a fornitori strategici esterni la fase produttiva dei singoli componenti, che verranno poi assemblati all’interno della nostra sede."
+      image=""
+      alt="" >}}
+  </div>
 
 </section>
 
+{{< cta >}}
 
 <!-- Ricambi -->
 <section id="ricambi">
 
-  <div class="relative pb-24 sm:pb-32">
+  <div class="relative py-24 sm:py-32">
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
       <div class="mx-auto max-w-4xl text-center">
-        <p class="text-base font-semibold leading-7 text-red-800">Ricambi</p>
-        <h1 class="mt-2 text-4xl font-bold tracking-tight text-gray-900 sm:text-5xl">Assistenza sul campo e vendita guarnizioni per applicazioni oleodinamiche e pneumatiche</h1>
-        <div class="text-base/7 leading-relaxed text-gray-700">
+        <p class="text-lg/7 sm:text-xl font-semibold tracking-tight text-red-700">Ricambi</p>
+        <h1 class="mt-2 text-4xl sm:text-5xl lg:text-6xl font-bold text-slate-900 tracking-tight">Assistenza sul campo e vendita guarnizioni per applicazioni oleodinamiche e pneumatiche</h1>
+        <div class="text-base/6 text-slate-600">
           <p class="mt-8">Siamo esperti in guarnizioni per oleodinamica e pneumatica perché conosciamo bene i punti critici di un cilindro e le attenzioni che bisogna avere durante la loro manutenzione. Il nostro core business è la riparazione di cilindri esistenti: da qui nasce l’estrema attenzione che poniamo sul sistema di tenuta, per offrire al cliente industriale soluzioni chiavi in mano ad altissima affidabilità.</p>
           <p class="mt-8">Quando il cliente effettua internamente la manutenzione dei cilindri, lo supportiamo con il nostro personale tecnico offrendo assistenza sul campo nelle fasi di smontaggio del cilindro, rilevazione dimensioni e tipologia guarnizioni sulla base delle condizioni di lavoro, e durante il montaggio finale.</p>
         </div>
       </div>
-
-      <div class="mt-16">
-        <div class="flex flex-row overflow-x-auto space-x-8">
-          {{< slide
-            text="Assistenza in stabilimento con strumentazione idonea per rilevazione dimensioni delle sedi, analisi campioni e supporto post-vendita ai vostri manutentori durante la fase di installazione delle guarnizioni."
-            image="/images/cilindri-bilanciatori.jpg"
-            alt="" >}}
-
-          {{< slide
-            text="Fornitura guarnizioni commerciali e tornite fino a 2500 mm di diametro, con possibilità di creare kit completi personalizzati, in materiali elastomerici, polimerici, plastici, PTFE e molti altri."
-            image="/images/pacco-guarnizioni.jpg"
-            alt="" >}}
-
-          {{< slide
-            text="La nostra offerta di guarnizioni e ricambi per oleodinamica e pneumatica include raschiatori, guarnizioni stelo, pistone, statiche, o-ring (OR) e guarnizioni per alberi rotanti."
-            image="/images/boccola-guarnizioni.jpg"
-            alt="" >}}
-        </div>
-      </div>
-
     </div>
   </div>
 
+  <div class="carousel mb-16">
+    {{< slide
+      text="Assistenza in stabilimento con strumentazione idonea per rilevazione dimensioni delle sedi, analisi campioni e supporto post-vendita ai vostri manutentori durante la fase di installazione delle guarnizioni."
+      image="/images/cilindri-bilanciatori.jpg"
+      alt="" >}}
+
+    {{< slide
+      text="Fornitura guarnizioni commerciali e tornite fino a 2500 mm di diametro, con possibilità di creare kit completi personalizzati, in materiali elastomerici, polimerici, plastici, PTFE e molti altri."
+      image="/images/pacco-guarnizioni.jpg"
+      alt="" >}}
+
+    {{< slide
+      text="La nostra offerta di guarnizioni e ricambi per oleodinamica e pneumatica include raschiatori, guarnizioni stelo, pistone, statiche, o-ring (OR) e guarnizioni per alberi rotanti."
+      image="/images/boccola-guarnizioni.jpg"
+      alt="" >}}
+  </div>
 
 </section>
 
